Update uiGotNotification logic and Remove unused imports
MainNursingActivity 수정사항:
    - uiGotNotification 의 코드를 loadNotifyData 으로 이동
    - SwipeRefreshLayout 콜백 코드 추가

그외 수정사항:
        - 불필요한 import 경고 삭제

레이아웃 수정사항:
    - activity_nursing_main 에 SwipeRefreshLayout 를 추가

MainNursingActivity:
    - Move code uiGotNotification to loadNotifyData
    - Add SwipeRefreshLayout code

Other:
    - Remove unused imports lint

res/layout:
    - Add SwipeRefreshLayout at activity_nursing_main layout

--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabGravity="center"
-                app:tabMode="scrollable"/>
+                app:tabMode="scrollable" />
 
 
         </android.support.design.widget.AppBarLayout>
@@ -71,13 +71,18 @@
             app:layout_anchor="@id/nursing_tabs"
             app:layout_anchorGravity="bottom|center" />
 
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/nursing_viewpager"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/dashboard_device_swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:foreground="?android:windowContentOverlay"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/nursing_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foreground="?android:windowContentOverlay" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
