--- a/app/src/main/res/layout/fragmnet_nursing_main_dashboard_21.xml
+++ b/app/src/main/res/layout/fragmnet_nursing_main_dashboard_21.xml
@@ -132,7 +132,7 @@
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:src="@drawable/ic_link"
-                        app:cb_color="@color/caloColor"
+                        app:cb_color="@color/calorieColor"
                         app:cb_pressedRingWidth="8dip" />
 
                     <TextView
@@ -142,7 +142,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_margin="10dp"
                         android:background="@null"
-                        android:text="@string/dashboard_calo"
+                        android:text="@string/dashboard_calorie"
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
                     <TextView
@@ -191,7 +191,7 @@
                         android:layout_centerVertical="true"
                         android:background="@null"
                         android:src="@drawable/ic_link"
-                        app:cb_color="@color/dirColor"
+                        app:cb_color="@color/distanceColor"
                         app:cb_pressedRingWidth="8dip" />
 
                     <TextView
@@ -201,7 +201,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_margin="10dp"
                         android:background="@null"
-                        android:text="@string/dashboard_dist"
+                        android:text="@string/dashboard_distance"
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
                     <TextView
