--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -28,7 +28,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:background="@drawable/toolbar_dropshadow"
+        android:background="@drawable/toolbar_drop_shadow"
         app:layout_anchor="@id/toolbar"
         app:layout_anchorGravity="bottom|center" />
 
@@ -62,7 +62,7 @@
         android:indeterminate="true" />
 
     <TextView
-        android:id="@+id/no_device_textview"
+        android:id="@+id/no_device_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
