--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -49,7 +49,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp" />
+                    android:layout_margin="10dp"
+                    android:contentDescription="@string/rssi" />
 
 
             </LinearLayout>
@@ -67,7 +68,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="@drawable/toolbar_dropshadow"
+            android:background="@drawable/toolbar_drop_shadow"
             app:layout_anchor="@id/nursing_tabs"
             app:layout_anchorGravity="bottom|center" />
 
