--- a/app/src/main/res/layout/fragment_nursing_splash_adduser.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash_adduser.xml
@@ -7,77 +7,77 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@null"
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/nursing_adduser_name"
+            android:id="@+id/nursing_add_user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_adduser_name"
+                android:id="@+id/edit_add_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name"
+                android:hint="@string/add_user_name_hint"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/nursing_adduser_age"
+            android:id="@+id/nursing_add_user_age"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_adduser_age"
+                android:id="@+id/edit_add_user_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Age (in full)"
+                android:hint="@string/add_user_age_hint"
                 android:inputType="numberSigned" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/nursing_adduser_height"
+            android:id="@+id/nursing_add_user_height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_adduser_height"
+                android:id="@+id/edit_add_user_height"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Height (Metric)"
+                android:hint="@string/add_user_height_hint"
                 android:inputType="numberSigned" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/nursing_adduser_weight"
+            android:id="@+id/nursing_add_user_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_adduser_weight"
+                android:id="@+id/edit_add_user_weight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Weight (Kg)"
+                android:hint="@string/add_user_weight_hint"
                 android:inputType="numberSigned" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/nursing_adduser_step"
+            android:id="@+id/nursing_add_user_step"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/edit_adduser_step"
+                android:id="@+id/edit_add_user_step"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Step Stride (Centimeter)"
+                android:hint="@string/add_user_step_hint"
                 android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
 
@@ -95,14 +95,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:checked="true"
-                android:text="Man" />
+                android:text="@string/add_user_men" />
 
             <RadioButton
                 android:id="@+id/radio_woman"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="woman" />
+                android:text="@string/add_user_woman" />
         </RadioGroup>
 
         <android.support.v7.widget.CardView
@@ -115,7 +115,7 @@
             app:contentPadding="0dp">
 
             <com.rainbow.kam.bt_scanner.tools.design.RippleView
-                android:id="@+id/nursing_adduser_skip"
+                android:id="@+id/nursing_add_user_skip"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
@@ -126,7 +126,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="Skip"
+                    android:text="@string/add_user_skip"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </com.rainbow.kam.bt_scanner.tools.design.RippleView>
         </android.support.v7.widget.CardView>
