--- a/app/src/main/res/layout/main_bluetooth_device_item.xml
+++ b/app/src/main/res/layout/main_bluetooth_device_item.xml
@@ -37,7 +37,7 @@
 
                 <TextView
                     android:id="@+id/item_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Medium Text"
@@ -60,7 +60,7 @@
 
                 <TextView
                     android:id="@+id/item_address"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Small Text"
@@ -79,11 +79,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/bondstate" />
+                    android:text="@string/bond_state" />
 
                 <TextView
                     android:id="@+id/item_bond"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Small Text"
@@ -104,7 +104,7 @@
 
                 <TextView
                     android:id="@+id/item_type"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Small Text"
@@ -125,7 +125,7 @@
 
                 <TextView
                     android:id="@+id/item_rssi"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Small Text"
