--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <declare-styleable name="RippleView">
         <attr name="rv_alpha" format="integer" />
-        <attr name="rv_framerate" format="integer" />
+        <attr name="rv_frameRate" format="integer" />
         <attr name="rv_rippleDuration" format="integer" />
         <attr name="rv_zoomDuration" format="integer" />
         <attr name="rv_color" format="color" />
