Fix Lint and Warning
238 Lint left

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="rippleColor">#00d7ff</color>
 
     <color name="stepColor">#00d7ff</color>
-    <color name="stepAccent">#32aaff</color>
+    <color name="stepAccent">#2af</color>
     <color name="stepPrimary">#32f1ff</color>
     <color name="stepPrimaryDark">#0078ff</color>
 
