--- a/app/src/main/res/layout/dashboard_data_item.xml
+++ b/app/src/main/res/layout/dashboard_data_item.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:background="@null"
             android:text="@string/info" />
 
         <TextView
@@ -36,8 +37,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@null"
             android:gravity="end"
-            android:text="@string/calendar"
-            android:layout_weight="1" />
+            android:text="@string/calendar" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
