--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -5,12 +5,14 @@
     android:id="@+id/nursing_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@null"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/nursing_coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@null"
         tools:context=".MainActivity">
 
         <android.support.design.widget.AppBarLayout
@@ -23,6 +25,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -40,6 +43,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:background="@null"
                     android:gravity="center"
                     android:text="@string/rssi"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -59,6 +63,7 @@
                 android:id="@+id/nursing_tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 app:tabGravity="center"
                 app:tabMode="scrollable" />
 
@@ -76,12 +81,14 @@
             android:id="@+id/dashboard_device_swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@null"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/nursing_viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 android:foreground="?android:windowContentOverlay" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
