--- a/app/src/main/res/layout/activity_nursing_splash.xml
+++ b/app/src/main/res/layout/activity_nursing_splash.xml
@@ -8,7 +8,8 @@
     <FrameLayout
         android:id="@+id/nursing_start_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@null">
 
 
     </FrameLayout>
