--- a/app/src/main/res/layout/detail_bluetooth_service_item.xml
+++ b/app/src/main/res/layout/detail_bluetooth_service_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_margin="7dp"
     android:background="@null"
     app:cardBackgroundColor="@color/colorPrimaryDark"
     app:cardCornerRadius="2dp"
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="20dp"
+        android:background="@null"
         android:orientation="vertical">
 
         <TextView
@@ -24,9 +26,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
+            android:background="@null"
             android:text="@string/detail_parent_list_item_service_title"
             android:textColor="#fff"
             android:textSize="20sp" />
@@ -34,20 +37,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@null"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/detail_parent_list_item_service_UUID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/detail_parent_list_item_service_UUID"
-                android:textColor="#fff"
                 android:layout_gravity="center_vertical|start"
-                android:layout_weight="1" />
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:text="@string/detail_parent_list_item_service_UUID"
+                android:textColor="#fff" />
 
             <TextView
                 android:id="@+id/detail_parent_list_item_service_type"
@@ -55,22 +60,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginBottom="10dp"
-                android:layout_marginStart="20dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@null"
                 android:text="@string/detail_parent_list_item_service_type"
-                android:textColor="#eee"
-                android:layout_weight="1" />
+                android:textColor="#eee" />
         </LinearLayout>
     </LinearLayout>
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-    <!--android:id="@+id/detail_parent_list_item_expand_arrow"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="center|end"-->
-    <!--android:focusable="false"-->
-    <!--android:src="@drawable/ic_link"-->
-    <!--android:layout_margin="@dimen/fab_margin" />-->
 
 </android.support.v7.widget.CardView>
