--- a/app/src/main/res/layout/fragment_detail_service.xml
+++ b/app/src/main/res/layout/fragment_detail_service.xml
@@ -3,4 +3,5 @@
     android:id="@+id/detail_service_recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@null"
     android:foreground="?android:windowContentOverlay" />
