--- a/app/src/main/res/layout/fragment_nursing_splash.xml
+++ b/app/src/main/res/layout/fragment_nursing_splash.xml
@@ -10,9 +10,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/logo"
         android:scaleType="center"
-        android:src="@mipmap/ic_launcher"
-        android:contentDescription="@string/logo" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:id="@+id/nursing_splash_pilot"
@@ -21,6 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:background="@null"
         android:orientation="vertical">
 
         <TextView
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="64dp"
+            android:background="@null"
             android:text="@string/pilot"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/nursingPrimary_light" />
@@ -36,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:background="@null"
             android:padding="10dp"
             android:text="@string/logo"
             android:textAppearance="?android:attr/textAppearanceMedium"
